--- a/ch02/src/main/webapp/ex08.html
+++ b/ch02/src/main/webapp/ex08.html
@@ -3,10 +3,9 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>Windows 7과 Mac OSX 비교</title>
+<link href="css/main.css" rel="stylesheet" type="text/css" />
 </head>
-
 <body>
-
 <h1>Windows 7과 Mac OSX 비교</h1>
 
 <p>
