--- a/ch03/src/main/webapp/ex06-nhead.html
+++ b/ch03/src/main/webapp/ex06-nhead.html
@@ -1,18 +1,13 @@
-﻿<!DOCTYPE HTML>
+<!DOCTYPE HTML>
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>백그라운드 예제</title>
+<title>naver search box 만들기</title>
 <style type="text/css">
-body {
-	margin:0;
-	padding:0;
-	background-color:#022250;
-	
-}
 </style>
 </head>
 
 <body>
+	<input type="text" name="kwd" id="input-kwd" value="">
 </body>
 </html>
