--- a/ch03/src/main/webapp/ex10.html
+++ b/ch03/src/main/webapp/ex10.html
@@ -13,6 +13,8 @@ ul.nothing, ul.something {
 ul.nothing li {
     font-weight:bold; 
 	margin:5px;
+	
+	float: right;
 }
 
 
@@ -20,14 +22,12 @@ ul.nothing li {
 </head>
 
 <body>
-<ul class="nothing">
-    <li> 메뉴 1 </li>
-    <li> 메뉴 2 </li>
-    <li> 메뉴 3 </li>
-    <li> 메뉴 4 </li>
-    <li> 메뉴 5 </li>
-</ul>
-
-
+	<ul class="nothing">
+	    <li>메뉴1</li>
+	    <li>메뉴2</li>
+	    <li>메뉴3</li>
+	    <li>메뉴4</li>
+	    <li>메뉴5</li>
+	</ul>
 </body>
 </html>
