--- a/ch03/src/main/webapp/ex06-nhead.html
+++ b/ch03/src/main/webapp/ex06-nhead.html
@@ -9,7 +9,7 @@
 .header .logo, .header .search-box { float:left } 
 
 .header .logo { width:225px; height:54px; font-size: 0; text-indent: 110%; background:url('images/naver.png') no-repeat 0 -158px; background-size: 440px 410px; }
-.header .search-box { border: 3px solid #19CE60; width: 400px; height: 44px; margin:7px 0 0 20px; }
+.header .search-box {border: 3px solid #19CE60; width: 400px; height: 44px; margin:7px 0 0 20px; float: right}
 
 .search-box a, .search-box button, .search-box input { display: block; float:left; border: none; } 
 .search-box input:focus, .search-box button:focus { outline: none }
@@ -19,7 +19,7 @@
 .search-box #keyboard { width:20px; height:14px; margin:15px 10px 0 10px; background:url('images/naver.png') no-repeat -420px -248px; background-size: 440px 410px; }
 .search-box #dropdown { width:10px; height:6px; margin:18px 10px 0 0; background:url('images/naver.png') no-repeat -404px -258px; background-size: 440px 410px; }
 
-.search-box button { width:45px; height: 44px; background-color:#19CE60; cursor: pointer }
+.search-box button { width:45px; height: 46px; margin-top:-1px; background-color:#19CE60; cursor: pointer }
 .search-box button span { width:23px; height: 23px; margin: 0 auto; display:block; background:#19CE60 url('images/naver.png') no-repeat -180px -386px; background-size: 440px 410px; }
 </style>
 </head>
