--- a/ch04/src/main/webapp/ex5.html
+++ b/ch04/src/main/webapp/ex5.html
@@ -12,7 +12,7 @@ p {
 }
 
 p.text1 {
-	text-indent:15px;	
+	text-indent:10px;	
 }
 
 
@@ -35,7 +35,7 @@ p.text2 span {
 
 p.cap {
 	text-transform: capitalize;
-	letter-spacing:20px;
+	letter-spacing:10px;
 }
 
 p.up {
@@ -44,9 +44,19 @@ p.up {
 }
 
 p.word_space {
-	word-spacing:10px;
+	word-spacing:20px;
 }
 
+
+/* ellipsis */
+p.text3 {
+	width:200px;				/* 텍스트를 가지고 있는 element의 너비 */
+	height: 20px;
+	border:1px solid #555;
+	overflow: hidden;           /* 글자길이가 너비를 넘어 갈 경우 보이지 않게 처리 */
+	white-space: nowarp;        /* 공백문자가 있는 경우 줄바꿈 금지 -> 한줄 처리  */
+	text-overflow: ellipsis     /* 글자 길이가 너비를 넘어 갈 경우 ... 처리     */
+} 
 
 </style>
 </head>
@@ -64,5 +74,8 @@ p.word_space {
 <p>면적을 나타내는 단위는 cm<span class="vertical">2</span>, m<span class="vertical">2</span>, km<span class="vertical">2</span> 등이 있습니다.</p>
 <p class="word_space"> 단어와 단어 사이의 간격을 조절합니다.</p>
 
+<p class="text3">
+abcdefghijklmnopqrstuvwxyz1234567890abcdefghijklmnopqrstuvwxyz1234567890
+</p>
 </body>
 </html>
