--- a/ch05/src/main/webapp/rect.html
+++ b/ch05/src/main/webapp/rect.html
@@ -5,6 +5,12 @@
 <title>Insert title here</title>
 <script type="text/javascript" src='js/rect.js'></script>
 <script type="text/javascript">
+let f = function(){
+	console.log('hello');
+}
+
+f();
+
 window.onload = function(){
 	const r1 = new Rect(10, 10, 100, 100, 'rgb(255, 0, 0)');
 	r1.show();
