--- a/ch07/src/main/webapp/ex05.html
+++ b/ch07/src/main/webapp/ex05.html
@@ -5,25 +5,19 @@
 <title>sample1</title>
 <script type="text/javascript" src="jquery/jquery-3.5.1.js"></script>
 <script type="text/javascript">
-// 선택자 - 첫번째 자식
+// 선택자 - 태그
 $(function(){
 	setTimeout(function(){
-		$('ul li:first-child').css('color', 'red');
+		$('li').css('color', '#f00');
 	}, 2000);
 });
 </script>
 </head>
 <body>
 	<ul>
-		<li>텍스트 텍스트 텍스트 텍스트</li>
 		<li>텍스트 텍스트 텍스트 텍스트 텍스트</li>
-		<li>텍스트 텍스트 텍스트 텍스트</li>
 		<li>텍스트 텍스트 텍스트 텍스트 텍스트</li>
-	</ul>
-	<ul>
-		<li>텍스트 텍스트 텍스트 텍스트</li>
 		<li>텍스트 텍스트 텍스트 텍스트 텍스트</li>
-		<li>텍스트 텍스트 텍스트 텍스트</li>
 		<li>텍스트 텍스트 텍스트 텍스트 텍스트</li>
 	</ul>
 </body>
