--- a/ch07/src/main/webapp/ex06.html
+++ b/ch07/src/main/webapp/ex06.html
@@ -5,21 +5,22 @@
 <title>sample1</title>
 <script type="text/javascript" src="jquery/jquery-3.5.1.js"></script>
 <script type="text/javascript">
-// 선택자 - 인접(형제, sibling)
+// 선택자 - 태그
 $(function(){
 	setTimeout(function(){
-		$('#second + li').css('color', 'red');
-		$('#second + li + li').css('color', 'blue');
+		$('#first').css('color', '#f00');
+		$('#third').css('color', '#00f');
+		$('#second, #fourth').css('color', '#0f0');
 	}, 2000);
 });
 </script>
 </head>
 <body>
 	<ul>
-		<li>텍스트 텍스트 텍스트 텍스트</li>
+		<li id='first'>텍스트 텍스트 텍스트 텍스트 텍스트</li>
 		<li id='second'>텍스트 텍스트 텍스트 텍스트 텍스트</li>
-		<li>텍스트 텍스트 텍스트 텍스트</li>
-		<li>텍스트 텍스트 텍스트 텍스트 텍스트</li>
+		<li id='third'>텍스트 텍스트 텍스트 텍스트 텍스트</li>
+		<li id='fourth'>텍스트 텍스트 텍스트 텍스트 텍스트</li>
 	</ul>
 </body>
 </html>
